
2008-02-20  Peter Landgren <peter.talken@telia.com>
    * src/plugins/rel_sv.py: pylint clean up

2008-02-20  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/DisplayTabs/_PersonRefEmbedList.py: change _o mnemonic to not 
    interfere with OK button.

2008-02-20 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbManager.py: #1725, ENTER, double-click if OK button sensitive only

2008-02-19 Brian Matherly <brian@gramps-project.org>
	* src/plugins/Summary.py:
	* src/plugins/CountAncestors.py:
	Remove person parameter.

2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbLoader.py (DbLoader.import_file): 
	Importer will stay on dialog until cancel or success. Errors
	will remain in dialog until fixed, or cancel.

2008-02-19 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_WebReportDialog.py:
	* src/ReportBase/_ReportDialog.py:
	* src/ReportBase/_TextReportDialog.py:
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_DrawReportDialog.py:
	* src/ReportBase/_Report.py:
	* src/ReportBase/_DocReportDialog.py:
	* src/ReportBase/_CommandLineReport.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/WebCal.py:
	* src/plugins/KinshipReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DescendReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/BookReport.py:
	* src/plugins/NarrativeWeb.py:
	* src/plugins/TimeLine.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/Calendar.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/SimpleBookTitle.py:
	* src/plugins/CustomBookText.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/FanChart.py: