@@ -25,7 +25,7 @@
 # Standard python modules
 #
 #-------------------------------------------------------------------------
-from gettext import gettext as _
+from TransUtils import sgettext as _
 
 #-------------------------------------------------------------------------
 #
@@ -34,6 +34,13 @@ from gettext import gettext as _
 #-------------------------------------------------------------------------
 from gtk import glade
 
+#-------------------------------------------------------------------------
+#
+# GRAMPS constants
+#
+#-------------------------------------------------------------------------
+WIKI_HELP_PAGE = 'Gramps_3.0_Wiki_Manual_-_Entering_and_Editing_Data:_Detailed'
+WIKI_HELP_SEC = _('manual|Merge_Sources')
 #-------------------------------------------------------------------------
 #
 # GRAMPS modules
@@ -105,7 +112,7 @@ class MergeSources(ManagedWindow.ManagedWindow):
 
     def help(self,obj):
         """Display the relevant portion of GRAMPS manual"""
-        GrampsDisplay.help('adv-merge-sources')
+        GrampsDisplay.help('adv-merge-sources', webpage = WIKI_HELP_PAGE, section = WIKI_HELP_SEC)
 
     def merge(self,obj):
         """
