@@ -1,3 +1,8 @@
+2008-02-20 Frederik De Richter <frederik.de.richter@pandora.be>
+    * src/Merge/_MergePerson.py
+    * src/Merge/_MergeSource.py
+    * src/Merge/_MergePlace.py
+    links to wiki manual
 
 2008-02-20  Peter Landgren <peter.talken@telia.com>
     * src/plugins/rel_sv.py: pylint clean up
